--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/ShuHai/miemie#readme",
   "devDependencies": {
-    "rollup": "^0.36.3"
+    "rollup": "^0.36.3",
+    "rollup-plugin-buble": "^0.13.0",
+    "eslint": "^2.4.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.3.2",
+    "eslint-plugin-standard": "^1.3.2"
   }
 }
